refactor: use 'URI' instead of 'URL'