@@ -9,11 +9,11 @@ import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.awt.event.MouseMotionListener;
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.logging.Logger;
 import javax.swing.*;
 import javax.swing.table.DefaultTableCellRenderer;
 import javax.swing.table.DefaultTableModel;
@@ -27,14 +27,14 @@ public final class MainPanel extends JPanel {
     super(new BorderLayout());
     TableModel model = makeModel();
     JTable table1 = makeTable(model);
-    UrlRenderer1 renderer1 = new UrlRenderer1();
-    table1.setDefaultRenderer(URL.class, renderer1);
+    UriRenderer1 renderer1 = new UriRenderer1();
+    table1.setDefaultRenderer(URI.class, renderer1);
     table1.addMouseListener(renderer1);
     table1.addMouseMotionListener(renderer1);
 
     JTable table = makeTable(model);
-    UrlRenderer renderer = new UrlRenderer();
-    table.setDefaultRenderer(URL.class, renderer);
+    UriRenderer renderer = new UriRenderer();
+    table.setDefaultRenderer(URI.class, renderer);
     table.addMouseListener(renderer);
     table.addMouseMotionListener(renderer);
 
@@ -47,12 +47,12 @@ public final class MainPanel extends JPanel {
   }
 
   private static TableModel makeModel() {
-    String[] columnNames = {"No.", "Name", "URL"};
+    String[] columnNames = {"No.", "Name", "URI"};
     Object[][] data = {
-        {0, "FrontPage", makeUrl("https://ateraimemo.com/")},
-        {1, "Java Swing Tips", makeUrl("https://ateraimemo.com/Swing.html")},
-        {2, "Example", makeUrl("http://www.example.com/")},
-        {3, "example.jp", makeUrl("http://www.example.jp/")}
+        {0, "FrontPage", makeUri("https://ateraimemo.com/")},
+        {1, "Java Swing Tips", makeUri("https://ateraimemo.com/Swing.html")},
+        {2, "Example", makeUri("http://www.example.com/")},
+        {3, "example.jp", makeUri("http://www.example.jp/")}
     };
     return new DefaultTableModel(data, columnNames) {
       @Override public Class<?> getColumnClass(int column) {
@@ -60,7 +60,7 @@ public final class MainPanel extends JPanel {
         // return switch (column) {
         //   case 0 -> Integer.class;
         //   case 1 -> String.class;
-        //   case 2 -> URL.class;
+        //   case 2 -> URI.class;
         //   default -> super.getColumnClass(column);
         // };
       }
@@ -71,11 +71,11 @@ public final class MainPanel extends JPanel {
     };
   }
 
-  private static URL makeUrl(String path) {
-    Optional<URL> op;
+  private static URI makeUri(String path) {
+    Optional<URI> op;
     try {
-      op = Optional.of(new URL(path));
-    } catch (MalformedURLException ex) {
+      op = Optional.of(new URI(path));
+    } catch (URISyntaxException ex) {
       op = Optional.empty();
     }
     return op.orElse(null);
@@ -116,7 +116,7 @@ public final class MainPanel extends JPanel {
     } catch (UnsupportedLookAndFeelException ignored) {
       Toolkit.getDefaultToolkit().beep();
     } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
-      ex.printStackTrace();
+      Logger.getGlobal().severe(ex::getMessage);
       return;
     }
     JFrame frame = new JFrame("@title@");
@@ -128,7 +128,7 @@ public final class MainPanel extends JPanel {
   }
 }
 
-class UrlRenderer1 extends UrlRenderer {
+class UriRenderer1 extends UriRenderer {
   @Override public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {
     Component c = super.getTableCellRendererComponent(
         table, value, isSelected, false, row, column);
@@ -146,7 +146,7 @@ class UrlRenderer1 extends UrlRenderer {
   }
 }
 
-class UrlRenderer extends DefaultTableCellRenderer implements MouseListener, MouseMotionListener {
+class UriRenderer extends DefaultTableCellRenderer implements MouseListener, MouseMotionListener {
   private static final Rectangle CELL_RECT = new Rectangle();
   private static final Rectangle ICON_RECT = new Rectangle();
   private static final Rectangle TEXT_RECT = new Rectangle();
@@ -212,8 +212,8 @@ class UrlRenderer extends DefaultTableCellRenderer implements MouseListener, Mou
   //   return cellBounds.contains(p);
   // }
 
-  private static boolean isUrlColumn(JTable table, int column) {
-    return column >= 0 && table.getColumnClass(column).equals(URL.class);
+  private static boolean isUriColumn(JTable table, int column) {
+    return column >= 0 && table.getColumnClass(column).equals(URI.class);
   }
 
   @Override public void mouseMoved(MouseEvent e) {
@@ -226,7 +226,7 @@ class UrlRenderer extends DefaultTableCellRenderer implements MouseListener, Mou
     boolean isSameCell = viewRowIndex == prevRow && viewColumnIndex == prevCol;
 
     boolean prevRollover = isRollover;
-    isRollover = isUrlColumn(table, viewColumnIndex); // && pointInsidePrefSize(table, pt);
+    isRollover = isUriColumn(table, viewColumnIndex); // && pointInsidePrefSize(table, pt);
     boolean isNotRollover = isRollover == prevRollover && !isRollover; // && !prevRollover;
 
     if (isSameCell && isNotRollover) {
@@ -248,7 +248,7 @@ class UrlRenderer extends DefaultTableCellRenderer implements MouseListener, Mou
 
   @Override public void mouseExited(MouseEvent e) {
     JTable table = (JTable) e.getComponent();
-    if (isUrlColumn(table, viewColumnIndex)) {
+    if (isUriColumn(table, viewColumnIndex)) {
       table.repaint(table.getCellRect(viewRowIndex, viewColumnIndex, false));
       viewRowIndex = -1;
       viewColumnIndex = -1;
@@ -260,18 +260,18 @@ class UrlRenderer extends DefaultTableCellRenderer implements MouseListener, Mou
     JTable table = (JTable) e.getComponent();
     Point pt = e.getPoint();
     int col = table.columnAtPoint(pt);
-    if (isUrlColumn(table, col)) { // && pointInsidePrefSize(table, pt)) {
+    if (isUriColumn(table, col)) { // && pointInsidePrefSize(table, pt)) {
       int crow = table.rowAtPoint(pt);
-      URL url = (URL) table.getValueAt(crow, col);
-      // System.out.println(url);
+      URI uri = (URI) table.getValueAt(crow, col);
+      // System.out.println(uri);
       try {
         // Web Start
         // BasicService bs = (BasicService) ServiceManager.lookup("javax.jnlp.BasicService");
-        // bs.showDocument(url);
+        // bs.showDocument(uri);
         if (Desktop.isDesktopSupported()) {
-          Desktop.getDesktop().browse(url.toURI());
+          Desktop.getDesktop().browse(uri);
         }
-      } catch (URISyntaxException | IOException ex) {
+      } catch (IOException ex) {
         UIManager.getLookAndFeel().provideErrorFeedback(e.getComponent());
       }
     }
